# SkySim

./: .buildinfo  .envrc  .gitignore  .pre-commit-config.yaml  README.md  devnotes.html  flake.nix  genindex.html  index.html  justfile  objects.inv  pyproject.toml  search.html  searchindex.js  usage-flake.nix  usage.html
.github/workflows/: docs.yaml
_modules/: index.html
_modules/skysim/: __main__.html  colours.html  plot.html  populate.html  query.html  settings.html  utils.html
_sources/: devnotes.md  index.md  usage.md
_sources/api/: colours.md  index.md  main.md  plot.md  query.md  settings.md
_sources/examples/: movie.md  still.md
_static/css/: custom.css
api/: colours.html  index.html  main.html  plot.html  populate.html  query.html  settings.html  utils.html
docs/source/: about.md  conf.py  index.md  index.rst  readme_link.rst  requirements.txt  usage.md  usage.rst
docs/source/_templates/: pydatasourcelink.html  python-module.md  python-module.rst
docs/source/_templates/autosummary/: base.rst
docs/source/api/: colours.md  colours.rst  index.rst  main.md  main.rst  plot.md  plot.rst  populate.md  populate.rst  query.md  query.rst  settings.md  settings.rst  utils.md  utils.rst
docs/source/examples/: index.md  movie.md
examples/: index.html  movie.html  movie.toml  still.html  still_image.toml
mvp/: AnimationExample.ipynb  airydisk.ipynb  astroquery_test.ipynb  combined.ipynb  coords_test.ipynb  foreground_basic.ipynb  foreground_processing.ipynb  image_brightness.ipynb  pdb_test.py  plot_utils.py
skysim/: __main__.py  colours.py  config.toml  default.toml  outline.py  plot.py  populate.py  query.py  settings.py  utils.py
tests/: conftest.py  minimal.toml  minimal_multiframe.toml  missing_required.toml  test_main.py  test_plot.py  test_populate.py  test_query.py  test_settings.py  test_skysim.py  tests.py  utils.py
tests/configs/: bad_type_date.toml  bad_type_time.toml  interval_duration_mismatch.toml  minimal_multiframe.toml  mismatched_all_or_none.toml  missing_one_or_more.toml  movie.toml  no_image_folder.toml  no_permissions_image.toml  no_permissions_tempdir.toml  overwrite_final.toml  still_image.toml  string_angle.toml  tomllib_error.toml  zero_fps_movie.toml
