[tool.poetry]
name = "skysim"
version = "0.1.0"
description = ""
authors = ["taiwithers <59430904+taiwithers@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
astropy = "^7.0.1"
astroquery = "^0.4.9.post1"
jupyter = "^1.1.1"
timezonefinder = "^6.5.8"
pydantic = "^2.10.6"
pydantic-extra-types = "^2.10.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pylint = "^3.3.4"
black = "^25.1.0"
nbqa = "^1.9.1"
pyright = "^1.1.394"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-testmon = "^2.1.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.1"
myst-parser = "^4.0.1"
pydata-sphinx-theme = "^0.16.1"
numpydoc = "^1.8.0"
autodoc-pydantic = "^2.2.0"
sphinx-autoapi = "^3.6.0"

[tool.poetry.scripts]
main = "skysim.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
report.skip_empty = true

[tool.isort]
profile = "black"

[tool.mypy]
follow_untyped_imports = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
disable_error_code = ["attr-defined", "unreachable", "union-attr"]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "skysim/*"
disable_error_code = ["prop-decorator"]

[tool.numpydoc_validation]
checks = [
    "all",  # run all, ignore the below
    "SA01", # missing see also
    "ES01", # missing exttended summary
    "EX01", # missing examples
    "SS05", # some stuff about verb tenses
    "SS06", # allow multi-line summaries
    "GL08", # let other checkers complain about a lack of docstrings
    "GL01", # don't start docstrings on the same line
]

[tool.pyright]
reportAttributeAccessIssue = false
reportReturnType = false           # pylint does this already
reportArgumentType = false
reportOperatorIssue = false
reportCallIssue = false
exclude = ['mvp/']

[tool.pylint]
format.max-line-length = 120
main.ignore-paths = ["mvp/", "docs/source/conf.py"]
main.jobs = 0
"messages control".disable = [
    "no-member",
    "redefined-outer-name",
    "useless-return",
    "too-many-locals",
    "unnecessary-lambda-assignment",
]
reports.output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ["tests"] # avoid searching mvp/
addopts = [
    "--cov=skysim",
    # "--capture=no",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--color=yes",
    "--no-cov-on-fail",
]
