[tool.poetry]
name = "skysim"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
readme = "README.md"
authors = ["Tai Withers <59430904+taiwithers@users.noreply.github.com>"]
urls.repository = "https://github.com/taiwithers/SkySim"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
astropy = "^7.0.1"
astroquery = "^0.4.9.post1"
timezonefinder = "^6.5.8"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pylint = "^3.3.4"
black = "^25.1.0"
pyright = "^1.1.394"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-testmon = "^2.1.3"
pillow = "^11.1.0"
pytest-rerunfailures = "^15.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.1"
myst-parser = "^4.0.1"
pydata-sphinx-theme = "^0.16.1"
numpydoc = "^1.8.0"
autodoc-pydantic = "^2.2.0"

[tool.poetry.scripts]
skysim = "skysim.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
report.skip_empty = true

[tool.isort]
profile = "black"

[tool.mypy]
follow_untyped_imports = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
disable_error_code = ["attr-defined", "unreachable", "union-attr"]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "skysim/*"
disable_error_code = [
    "prop-decorator", # ignore multiple decorators on class attributes
]

[tool.numpydoc_validation]
checks = [
    "all",  # run all, ignore the below
    "SA01", # missing see also
    "ES01", # missing exttended summary
    "EX01", # missing examples
    "SS05", # some stuff about verb tenses
    "SS06", # allow multi-line summaries
    "GL08", # let other checkers complain about a lack of docstrings
    "GL01", # don't start docstrings on the same line
]

[tool.pyright]
reportAttributeAccessIssue = false
reportReturnType = false                 # pylint does this already
reportArgumentType = false
reportOperatorIssue = false
reportCallIssue = false
reportIndexIssue = false
reportInvalidTypeForm = false
reportTypedDictNotRequiredAccess = false

[tool.pylint]
format.max-line-length = 120
main.ignore-paths = ["docs/source/conf.py", ".poetry/*"]
main.jobs = 0
"messages control".disable = [
    "too-many-lines",
    "no-member",
    "redefined-outer-name",
    "useless-return",
    "too-many-locals",
    "unnecessary-lambda-assignment",
    "redefined-builtin",             # specifically enabled in pre-commit pylint[full]
    "unused-import",                 # specifically enabled in pre-commit pylint[full]
    "fixme",                         # specifically enabled in just recipe todo
]
reports.output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--cov=skysim",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--color=yes",
    "--no-cov-on-fail",
    "--durations=0",
    "--durations-min=1.0",
]
